re PR tree-optimization/28029 (wrong optimization with -ftree-vectorize)

2006-07-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28029
	Backport
	2006-02-15 Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-alias.c (get_tmt_for): Don't handle TYPE_READONLY
	specially here.

	* gcc.dg/vect/pr28029.c: New testcase.

From-SVN: r115708